# font2bitmap

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clone-cmake-tools.sh  pull-libs.sh  pull-submodules.sh  update_submodules.sh
cmake/: 00_DetectOSAndArchitecture.cmake  01_tools.cmake  02_copy_headers_to_include_directory.cmake  03_ide_setup.cmake  aribeiro_options.cmake  detect_neon.cmake  detect_openmp.cmake  detect_rpi.cmake  detect_sse2.cmake  include.cmake
cmake-modules/: FindaRibeiroCore.cmake  FindaRibeiroData.cmake  FindaRibeiroPlatform.cmake
cmake/libs/: aRibeiroWrappers.cmake  libLinkOpenGL.cmake  libaRibeiroCore.cmake  libaRibeiroData.cmake  libaRibeiroPlatform.cmake  libassimp.cmake  libconvertutf.cmake  libfreetype.cmake  libjpeg.cmake  libmd5.cmake  libpng.cmake  librandom.cmake  libsfml.cmake  libzlib.cmake
cmake/powershell/: check_path_creation.ps1  download.ps1  unzip.ps1
resources/: CreateFontLinux.sh  CreateFontWin32.bat  R_generate_with_ini.bat  R_generate_with_ini.sh  charset.utf8  custom_chars.ini
resources/buttons/: Buttons_curvas.odg  Buttons_txt_edit.odg  export_guite.txt
src/: Bounds.h  CMakeLists.txt  ImageRescaler.h  UTFops.h  ft2_font_generator.cpp  ft2_font_generator.h  main.cpp  texturefontrenderer.cpp  texturefontrenderer.h
src/win32/: getopt.c
